Added mock data to Gamma

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     depends_on:
       - gamma-db
       - redis
+    volumes:
+      - ./mock.json:/mock/mock.json
     ports:
       - 8081:8081
 
