--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,8 @@ services:
     image: osixia/phpldapadmin:0.9.0
     environment:
       PHPLDAPADMIN_LDAP_HOSTS: ldap
+      PHPLDAPADMIN_HTTPS: "false"
     depends_on:
       - ldap
     ports:
-      - 6443:443
+      - 8080:80
