--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ before_install:
   - docker pull osixia/openldap:1.4.0
   - >
     docker run -d --name ldap -p 636:636
-    -e LDAP_ORGANISATION: "digIT"
-    -e LDAP_DOMAIN="chalmers.it"
-    -e LDAP_BASE_DN="dc=chalmers,dc=it"
-    -e LDAP_ADMIN_PASSWORD="password"
+    -e LDAP_ORGANISATION=digIT
+    -e LDAP_DOMAIN=chalmers.it
+    -e LDAP_BASE_DN=dc=chalmers,dc=it
+    -e LDAP_ADMIN_PASSWORD=password
     -e LDAP_SEED_INTERNAL_LDIF_PATH=/ldif
     -e LDAP_SEED_INTERNAL_SCHEMA_PATH=/schemas
     -e LDAP_TLS_VERIFY_CLIENT=try
