--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,9 @@ services:
       - 636:636
 
   ldap-admin:
-    image: osixia/phpldapadmin:0.9.0
+    build:
+      context: ./
+      dockerfile: ldap-admin.Dockerfile
     environment:
       PHPLDAPADMIN_LDAP_HOSTS: ldap
       PHPLDAPADMIN_HTTPS: "false"
