Added default groups, user and login DN

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
       context: ./
       dockerfile: ldap-admin.Dockerfile
     environment:
-      PHPLDAPADMIN_LDAP_HOSTS: ldap
+      PHPLDAPADMIN_LDAP_HOSTS: "#PYTHON2BASH:{'ldap':[{'login':[{'auth_type':'session'},{'bind_id':'cn=admin,dc=chalmers,dc=it'}]}]}"
       PHPLDAPADMIN_HTTPS: "false"
     depends_on:
       - ldap
