--- a/cthit.docker-compose.yml
+++ b/cthit.docker-compose.yml
@@ -5,7 +5,12 @@ services:
       context: ./
       dockerfile: ldap-admin.Dockerfile
     environment:
-      PHPLDAPADMIN_LDAP_HOSTS: "#PYTHON2BASH:{'ldap.chalmers.it':[{'login':[{'auth_type':'session'},{'bind_id':'uid=davidm,ou=people,dc=chalmers,dc=it'}]}]}"
+      PHPLDAPADMIN_LDAP_HOSTS: "#PYTHON2BASH:{'ldap.chalmers.it':[
+        {'login':[
+          {'auth_type':'session'},
+          {'bind_id':'uid=davidm,ou=people,dc=chalmers,dc=it'}
+          ]}
+        ]}"
       PHPLDAPADMIN_HTTPS: "false"
     ports:
       - 8080:80
